# hindsight-manager

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docs/: 2026-05-10-user-password-management-design.md
docs/plans/: 2026-05-05-hindsight-manager.md  2026-05-06-saas-host-control-plane-integration.md  2026-05-07-manager-api-proxy-mvp.md  2026-05-10-user-password-management-implementation.md
docs/specs/: 2026-05-05-hindsight-manager-design.md  2026-05-06-manager-ui-control-plane-integration-design.md  2026-05-06-saas-host-npm-package-design.md  2026-05-07-manager-api-proxy-mvp-design.md
hindsight_manager/: config.py  crypto.py  db.py  jinja_filters.py  main.py
hindsight_manager/api/: admin.py  api_keys.py  auth.py  captcha.py  members.py  pages.py  password.py  proxy.py  task_monitor.py  tenants.py
hindsight_manager/auth/: audit.py  captcha.py  cas.py  dependencies.py  local.py  password.py  session.py
tests/: conftest.py  test_access_token.py  test_admin_users.py  test_api_keys_api.py  test_audit_outbox.py  test_auth_dict_user.py  test_auth_html.py  test_captcha.py  test_cas_auth.py  test_crypto.py  test_email_service.py  test_integration.py  test_local_auth.py  test_manager_tenant.py  test_members_api.py  test_otp_redirect.py  test_pages.py  test_password_api.py  test_password_service.py  test_proxy.py  test_require_admin.py  test_session.py  test_task_monitor.py  test_tenant_purge.py  test_tenants_api.py  test_ui_integration.py  test_user_role.py
(+98 files in other folders)
