[project]
name = "hindsight-manager"
version = "0.1.0"
description = "Tenant management service for Hindsight"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.3",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "typer>=0.15.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-cas>=1.6.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.7.0",
    "gmssl>=3.2.2",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "apscheduler>=3.11.2",
    "xinyi-platform @ file:///Users/liling/src/lab/xinyi-platform",
]

[project.scripts]
hindsight-manager = "hindsight_manager.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hindsight_manager"]

[tool.uv.sources]
xinyi-platform = { path = "/Users/liling/src/lab/xinyi-platform", editable = true }

[dependency-groups]
dev = ["pytest>=9.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
